# workshop-getting-started

./: README.md  docker-compose.yml  linux-setup.md  macos-setup.md  requirements.txt  run.sh  windows-setup.md
02_backend/: main.py  pyproject.toml
03_workshop/: 00_overview.ipynb  01_uv_environment_management.ipynb  02_jupyter_basics.ipynb  03_ollama_and_llm_prompting.ipynb  pyproject.toml
img/: workshops_schema.drawio  workshops_schema_notes.drawio
