[project]
name = "workshop-getting-started-backend"
version = "0.1.0"
description = "Backend for AISC Getting Started."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.1",
    "httpx==0.25.2",
    "python-dotenv==1.0.0",
    "ollama==0.1.7",
    "setuptools==80.9.0"
]